2003-11-01	Dmitry Rutsky	<rutsky@school.ioffe.rssi.ru>

	* TODO:  documented "unchanging banners" bug.
	* lessons/ru.typ:  minor improvements.

2003-10-31	Dmitry Rutsky	<rutsky@school.ioffe.rssi.ru>

	* version.sh, autogen.sh, configure.in:  a better handling of version
	  definition.  Changed AC_INIT macro to handle current AC_INIT
	  semantics.
	* Makefile.am:  added `intl' to SUBDIRS to fix broken distribution.
	* lessons/ru.typ:  `#! /' typo was fixed.
	* src/cursmenu.c:  up-label, if present, now works as described in
	  the manual.  Most of the problems with ESCAPE key handling were
	  fixed.  Error messages in case of a nonexistent label will no
	  longer contain irrelevant script lines...
	* TODO:  ...nonetheless the line number is still irrelevant.

2003-10-26  Hynek Hanke  <hanke@volny.cz>

	* autogen.sh (gettexth): Added a search for gettext.h in /usr/ as Dmitry
	suggested.

	* po/cs.po: Updated.

2003-10-25  Hynek Hanke  <hanke@volny.cz>
	
	* Makefile.am (EXTRA_DIST): gtypist.1 corrected to src/gtypist.1

	* configure.in: Added missing target Makefile.in

	* autogen.sh (gettexth): Copy gettext to src/

2003-10-25  Hynek Hanke  <hanke@volny.cz>
	
	* po/POTFILES.in: Updated to reflect that the sources are now in src/
	
	* configure.in: Build also src/Makefile.am

	* Makefile.am: Some stuff moved to src/Makefile.am
	Added src/ to subdirectories.

	* All .c and .h sources moved to a new directory src/.

2003-10-25  Hynek Hanke  <hanke@volny.cz>
	
	* autogen.sh: Don't try to build documentation itself.
	It's generated now by regular auto-tools mechanism. See doc/Makefile.am.

2003-10-24  Hynek Hanke  <hanke@volny.cz>

	* autogen.sh (automake --add-missing): Added test on failure of this command,
	so that it doesn't cause obscure problem later.

2003-10-03: Michael Opdenacker <michaelo@gnu.org>

	* typefortune: Ben Armstrong fixed the '-s' and '-n' options

2003-09-28  Michael Opdenacker <michaelo@gnu.org>

        * cursmenu.c, error.c, gtypist.c, script.c: