@@ -1,3 +1,11 @@
+2003-11-16	Dmitry Rutsky	<rutsky@school.ioffe.rssi.ru>
+
+	* autogen.sh:  use `autopoint' instead of `gettextize'.
+	* configure.in, Makefile.am:  permanently added the gettext stuff,
+	  removed "don't commit" warnings (the files will no longer be changed
+	  in the build process).
+	* m4/Makefile.am:  added.
+
 2003-11-01	Dmitry Rutsky	<rutsky@school.ioffe.rssi.ru>
 
 	* TODO:  documented "unchanging banners" bug.
